@@ -1,5 +1,10 @@
 2004-05-01 Alvaro del Castillo  <acs@barrapunto.com>
 
+	* src/planner-resource-dialog.c: implemented undo for resource calendar 
+	in the resource editor dialog.
+
+2004-05-01 Alvaro del Castillo  <acs@barrapunto.com>
+
 	* src/planner-resource-dialog.c: implemented undo for resource note
 	in the resource editor dialog.
 
